--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -46,14 +46,14 @@
                     </div>
                     <b class="sub-arrow"></b>
                  </li>
-                 <li class="nav-item">
+                 <!-- <li class="nav-item">
                     <a routerLink="/price-management" class="nav-link">
                     <i class="fas fa-rupee-sign nav-icon"></i>
                     <span class="nav-text fadeable">
                     <span>Price Management</span>
                     </span>
                     </a>
-                 </li>
+                 </li> -->
                  
                  <li class="nav-item">
                     <a routerLink="/freight-charges" class="nav-link">
