po implementd in admin

--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -64,7 +64,7 @@
                     </a>
                  </li>
                  <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a class="nav-link">
                     <i class="fa fa-users nav-icon"></i>
                     <span class="nav-text fadeable">
                     <span>User Management</span>
@@ -72,13 +72,21 @@
                     </a>
                  </li>
                  <li class="nav-item">
-                    <a href="#" class="nav-link">
+                    <a class="nav-link">
                     <i class="fa fa-shopping-bag nav-icon"></i>
                     <span class="nav-text fadeable">
                     <span>Order Management</span>
                     </span>
                     </a>
                  </li>
+                 <li class="nav-item" style="cursor: pointer;" routerLink="/po-list">
+                  <a class="nav-link">
+                     <i class="nav-icon fa fa-user"></i>
+                     <span class="nav-text fadeable">
+                     <span>PO View</span>
+                     </span>
+                  </a>
+               </li>
                  <li class="nav-item" style="cursor: pointer;">
                     <a class="nav-link dropdown-toggle collapsed">
                        <i class="nav-icon fa fa-cog"></i>
