--- a/src/app/settings/edit-threshold-price/edit-threshold-price.component.html
+++ b/src/app/settings/edit-threshold-price/edit-threshold-price.component.html
@@ -9,7 +9,7 @@
              <div class="page-content container container-plus">
                 <div class="row">
                    <div class="col-sm-12">
-                      <h4 class="pull-left page-title">Set Threshold Limits</h4>
+                      <h4 class="pull-left page-title">Update Threshold Limits</h4>
                       <ol class="breadcrumb pull-right">
                          <li> <a href="#"><i class="fa fa-angle-double-left"></i> Back</a></li>
                       </ol>
@@ -20,38 +20,39 @@
                    <div class="col-md-12">
                       <div class="panel panel-default">
                          <div class="panel-body">
+                           <form [formGroup]="setthresholdForm">
                             <div class="row">
                                <div class="col-sm-4">
                                  <div class="form-group">
                                     <label for="category">Product Name</label>
-                                    <select class="form-control rm06" (change)="selectProduct($event)"  name="status">
+                                    <select class="form-control rm06" (change)="selectProduct($event)" formControlName="pro_id"  name="status">
                                        <option value="">--Select--</option>
-                                       <option value="{{proItem.product_id}}" *ngFor="let proItem of productList" [selected]="editdataInfo?.pro_id" >{{proItem.product_title}}</option>
+                                       <option value="{{proItem.product_id}}" *ngFor="let proItem of productList">{{proItem.product_title}}</option>
                                     </select>
                                  </div>
                                </div>
                                <div class="col-sm-4">
                                  <div class="form-group">
                                     <label for="category">Categories</label>
-                                    <select class="form-control rm06" (change)="selectCat($event)" name="status">
+                                    <select class="form-control rm06" (change)="selectCat($event)" formControlName="cat_id" name="status">
                                        <option value="">--Select--</option>
-                                       <option value="{{catItem.category_id}}" *ngFor="let catItem of categoriList" [(ngModel)]="catItem.category_name">{{catItem.category_name}}</option>
+                                       <option value="{{catItem.category_id}}" *ngFor="let catItem of categoriList">{{catItem.category_name}}</option>
                                     </select>
                                  </div>
                                </div>
                                <div class="col-sm-4">
                                  <div class="form-group">
                                     <label for="category">Sub Category</label>
-                                    <select class="form-control rm06" (change)="subCategori($event)"  name="status">
+                                    <select class="form-control rm06" (change)="subCategori($event)" formControlName="sub_cat_id"  name="status">
                                        <option value="">--Select--</option>
-                                       <option value="{{item.sub_category_id}}" *ngFor="let item of subCategoriList" [selected]="editdataInfo?.sub_cat_id">{{item.sub_category_name}}</option>
+                                       <option value="{{item.sub_category_id}}" *ngFor="let item of subCategoriList">{{item.sub_category_name}}</option>
                                     </select>
                                  </div>
                                </div>
                                <div class="col-sm-4">
                                   <div class="form-group">
                                      <label for="category">Sizes Offered</label>
-                                     <select class="form-control rm06" name="status" [(ngModel)]="editdataInfo.size" (change)="getPrice($event)" >
+                                     <select class="form-control rm06" name="status" formControlName="size" >
                                         <option value="">--Select--</option>
                                         <option value="10-50">10-50</option>
                                         <option value="10-70">10-70</option>
@@ -63,39 +64,40 @@
                                <div class="col-sm-4">
                                   <div class="form-group">
                                      <label for="">Basic Price</label>
-                                     <input type="number" placeholder="" [(ngModel)]="basicPrice" id="" class="form-control" value="0">
+                                     <input type="number" placeholder="0"  formControlName="BPT_Price" id="" class="form-control" value="">
                                   </div>
                                </div>
                                <div class="col-sm-4">
                                   <div class="form-group">
                                      <label for="">Price Premium</label>
-                                     <input type="number" placeholder="" [(ngModel)]="premiumPrice"  id="" class="form-control" value="0">
+                                     <input type="number" placeholder="0" formControlName="Price_Premium"  id="" class="form-control" value="">
                                   </div>
                                </div>
                                <div class="col-sm-4">
                                   <div class="form-group">
                                      <label for="">Misc Expense</label>
-                                     <input type="number" placeholder="" [(ngModel)]="miscExp" id="" class="form-control" value="0">
+                                     <input type="number" placeholder="0" formControlName="Misc_Expense" id="" class="form-control" value="">
                                   </div>
                                </div>
                                <div class="col-sm-4">
                                   <div class="form-group">
                                      <label for="">Interest Rate ( % )</label>
-                                     <input type="number" placeholder="" [(ngModel)]="InterestRate" id=""  class="form-control" value="0">
+                                     <input type="number" placeholder="0" formControlName="Interest_Rate" id=""  class="form-control" value="">
                                   </div>
                                </div>
                                <div class="col-sm-4">
                                   <div class="form-group">
                                      <label for="">KAM Discount</label>
-                                     <input type="number" placeholder="" [(ngModel)]="kamDiscount"  id="" class="form-control" value="0">
+                                     <input type="number" placeholder="0" formControlName="CAM_Discount"  id="" class="form-control" value="">
                                   </div>
                                </div>
                                <div class="col-sm-12">
                                   <div class="">
-                                     <button type="button" (click)="saveThreshold()" class="btn btn-primary btn-ser" >Save</button>
+                                     <button type="button" (click)="saveThreshold()" class="btn btn-primary btn-ser" >Submit</button>
                                   </div>
                                </div>
                             </div>
+                           </form>
                          </div>
                       </div>
                    </div>
