--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -81,7 +81,7 @@
                  </li>
                  <li class="nav-item" style="cursor: pointer;" routerLink="/po-list">
                   <a class="nav-link">
-                     <i class="nav-icon fa fa-user"></i>
+                     <i class="nav-icon fa fa-file-text-o"></i>
                      <span class="nav-text fadeable">
                      <span>PO View</span>
                      </span>
