--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -98,7 +98,7 @@
                     <div class="hideable submenu collapse">
                        <ul class="submenu-inner">
                           <li class="nav-item">
-                             <a routerLink="/set-threshold-limit" class="nav-link">
+                             <a routerLink="/threshold-limit" class="nav-link">
                              <span class="nav-text">
                              <span>Set Threshold Limits</span>
                              </span>
