--- a/src/app/manage-charges/add-freight-charges/add-freight-charges.component.html
+++ b/src/app/manage-charges/add-freight-charges/add-freight-charges.component.html
@@ -136,7 +136,7 @@
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                <tr *ngFor="let freight of freightCharges">
+                                                <tr *ngFor="let freight of freightCharges | paginate: { itemsPerPage: 8, currentPage: p }">
                                                     <td>{{freight?.pickup_from}}</td>
                                                     <td>{{freight?.location}}</td>
                                                     <td>{{freight?.freight_charges}}</td>
@@ -160,9 +160,11 @@
                                                         </a>
                                                     </td>
                                                 </tr>
-
                                             </tbody>
                                         </table>
+                                        <div class="col-12 text-right">
+                                            <pagination-controls (pageChange)="p = $event"></pagination-controls>
+                                          </div>
                                     </div>
                                 </div>
                             </div>
