--- a/src/app/settings/edit-threshold-price/edit-threshold-price.component.html
+++ b/src/app/settings/edit-threshold-price/edit-threshold-price.component.html
@@ -11,7 +11,7 @@
                    <div class="col-sm-12">
                       <h4 class="pull-left page-title">Update Threshold Limits</h4>
                       <ol class="breadcrumb pull-right">
-                         <li> <a href="#"><i class="fa fa-angle-double-left"></i> Back</a></li>
+                         <li> <a><i class="fa fa-angle-double-left"></i> Back</a></li>
                       </ol>
                    </div>
                 </div>
