--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -5,21 +5,16 @@
               <button type="button" class="btn btn-burger burger-arrowed static collapsed ml-2 d-flex d-xl-none" data-toggle-mobile="sidebar" data-target="#sidebar" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle sidebar">
               <span class="bars"></span>
               </button>
-              <a class="navbar-brand text-white" routerLink="/dashboard">
+              <a class="navbar-brand text-white" routerLink="/dashboard/dashboard">
               <img src="assets/images/logo-white.png" style="max-height: 44px;">
               </a>
               <button type="button" class="btn btn-burger mr-2 d-none d-xl-flex" data-toggle="sidebar" data-target="#sidebar" aria-controls="sidebar" aria-expanded="true" aria-label="Toggle sidebar">
               <span class="bars"></span>
               </button>
            </div>
-           <div class="tata-white-logo" routerLink="/dashboard">
+           <div class="tata-white-logo" routerLink="/dashboard/dashboard">
               <img src="assets/images/secondary-white.png">
            </div>
         </div>
      </nav>
-     <script type="text/javascript">
-        $(document).ready(function() {
-        $('#example').DataTable();
-        } );
-     </script>
 </div>
